Добавлен 6й пункт на главной и создана новая страница.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li>Третий пункт</li>
     <li>Четвёртый пункт</li>
     <li>Пятый пункт</li>
+    <li>Шестой пункт</li>
   </ol>
 </body>
 </html>
