--- a/page4.html
+++ b/page4.html
@@ -6,6 +6,9 @@
   <title>Страница 4 (создана в GitHub)</title>
 </head>
 <body>
-  
+  <ol>
+    <li>Первый пункт</li>
+    <li>Второй пункт</li>
+  </ol>
 </body>
 </html>
